--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Odin Recipies</h1>
+        <a href="recipies/honeysalmon.html">Honey Salmon</a>
     </body>
     
 
