--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     </head>
     <body>
         <h1>Odin Recipies</h1>
-        <a href="recipies/honeysalmon.html">Honey Salmon</a>
+        <ul>
+        <li><a href="recipies/honeysalmon.html">Honey Salmon</a></li>
+        <li><a href="recipies/chickennoodle.html">Chicken Noodle Soup</a></li>
+        <li><a href="recipies/cookies.html">Chocolate Chip Cookies</a></li>
+        </ul>
     </body>
     
 
