--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
     <meta charset="utf-8">
-    <title> </title>
+    <title>Odin Recipie Project</title>
     </head>
     <body>
         <h1>Odin Recipies</h1>
