--- a/recipies/chickennoodle.html
+++ b/recipies/chickennoodle.html
@@ -2,27 +2,30 @@
 <html lang="en">
     <head>
     <meta charset="utf-8">
-    <title> </title>
+    <title>Chicken Noodle Recipie</title>
     </head>
     <body>
         <h1>Chicken Noodle Soup</h1>
-        <img src="https://www.allrecipes.com/thmb/XcJMuiWHOliyDQcyoerLd8ABaU8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Grandmas-Chicken-Noodle-Soup-lutzflcat-1x1-1-2000-abd4eec3a9a04784af1201cefeb7c44e.jpg"
+        <img src="https://www.allrecipes.com/thmb/XcJMuiWHOliyDQcyoerLd8ABaU8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Grandmas-Chicken-Noodle-Soup-lutzflcat-1x1-1-2000-abd4eec3a9a04784af1201cefeb7c44e.jpg" alt="Chicken Noodle Soup"
         style="width: 350; height: 300px">
         <p>Delicious soup for a cold day.</p>
 
         <h4>Ingredients</h4>
             <ul>
                 <li>2 Cups of Noodles</li>
-                <li>12 Cups of Chicken Broth</li>
+                <li>10 Cups of Chicken Broth</li>
                 <li>3 Cups of Diced Chicken</li>
                 <li>1 Cup of Chopped Onions</li>
                 <li>1 Cup of Chopped Celery</li>
                 <li>1 Cup of Chopped Carrots</li>
+                <li></li>
             </ul>
         <h4>Instructions</h4>
-        <ul>
-            <li></li>
-        </ul>
+        <ol>
+            <li>Using a large pot of water, boil the pasta. Drain the water when pasta is finished cooking</li>
+            <li>In a seperate pot, boil the chicken broth and add in the vegetables. Reduce heat, cover and simmer.</li>
+            <li>Stir in noodles and cook for 2-3 minutes.</li>
+        </ol>
         
     </body>
     
