--- a/recipies/cookies.html
+++ b/recipies/cookies.html
@@ -11,15 +11,21 @@
         <p>Warm and chewy chocolate chip cookies.</p>
         <h4>Ingredients</h4>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>2 Cups of Flour</li>
+            <li>1/2 TSP of Baking Soda</li>
+            <li>1/2 TSP of Salt</li>
+            <li>1 Cup of Brown Sugar</li>
+            <li>1/2 Cup of Butter</li>
+            <l1>1/2 Cup of Sugar</l1>
+            <li>1 Large Egg</li>
+            <li>1 TBSP of Vanilla Extract</li>
+            <li>2 Cups of Chocolate Chips</li>
         </ul>
         <h4>Instructions</h4>
         <ol>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Mix the sugar, brown sugar, butter, egg, vanilla extract, flour, and chocolate chips.</li>
+            <li>Scoop dough and place on a greased baking sheet</li>
+            <li>Bake at 325 degrees for 15 to 17 minutes.</li>
         </ol>
 
 
